Update style, add more dates and fix spacing on home page

--- a/public/stylesheets/timeline-desktop.css
+++ b/public/stylesheets/timeline-desktop.css
@@ -29,13 +29,13 @@ h1 {
 .filter {
     background-color: transparent;
     margin: 0em;
-    padding: 20px;
+    padding: 10px;
     text-align: left;
     vertical-align: middle;
 }
 
 .filterLabel {
-    padding-left: 50px;
+    padding-left: 25px;
     vertical-align: top;
 }
 
@@ -57,8 +57,7 @@ h1 {
     background-color: transparent;
     display: block;
     margin: 0em;
-    padding: 20px;
-    padding-top: 25px;
+    padding: 10px;
     position: relative;
     text-align: left;
     vertical-align: middle;
@@ -93,7 +92,7 @@ h1 {
 }
 
 .navigationLabel {
-    padding-left: 50px;
+    padding-left: 25px;
     vertical-align: top;
 }
 
