--- a/public/stylesheets/timeline.css
+++ b/public/stylesheets/timeline.css
@@ -166,8 +166,8 @@ label {
 .yearJump {
     text-align: left;
     vertical-align: middle;
-    padding-top: 25px;
-    padding-bottom: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .yearJumpSelect {
